<resources>

    <string name="app_name">SecureApp</string>
    <string name="open">open</string>
    <string name="close">clase</string>

    ------------------------------------------------------------------------------------
    <string name="invalid_password">Ingrese una contraseña mayor a 6 digitos</string>
    <string name="invalid_campo">Este campo es obligatorio</string>
    <string name="invalid_identificacion">Ingrese un número de identificación valida</string>
    <string name="invalid_telefono">Ingrese un número de teléfono valido</string>
    ------------------------------------------------------------------------------------
    <string name="pantalla_iniciar_sesion_titulo">INICIAR SESIÓN</string>
    <string name="IS_email">Correo electrónico</string>
    <string name="IS_password">Contraseña</string>
    <string name="IS_olvido_password">¿Olvido su contraseña?</string>
    <string name="IS_registro">¿No tienes una cuenta aún? Regístrate</string>
    ------------------------------------------------------------------------------------
    <string name="pantalla_registro_titulo">REGISTRAR CUENTA</string>
    <string name="R_nombre">Nombre</string>
    <string name="R_apellido">Apellido</string>
    <string name="R_telefono">Teléfono</string>
    <string name="R_identificacion">Identificación</string>

    <string-array name="R_listaDepartamentos">
        <item>Antioquia</item>
        <item>Valle del cauca</item>
    </string-array>

    <string-array name="R_listaAntioquia">
        <item>Cáceres</item>
        <item>Armenia</item>
        <item>Caldas</item>
        <item>Itagüí</item>
        <item>Medellín</item>
    </string-array>

    <string-array name="R_listaValleDelCauca">
        <item>Alcalá</item>
        <item>Andalucía</item>
        <item>Buga</item>
        <item>Bugalagrande</item>
        <item>Cali</item>
        <item>Calima - El Darién</item>
        <item>Cartago</item>
        <item>Guacarí</item>
    </string-array>
    <string name="R_botonRegistrar">REGISTRAR</string>
    ------------------------------------------------------------------------------------
    <string name="pantalla_olvido_password">RECUPERA TU CONTRASEÑA</string>
    <string name="OP_ingresaEmail">Ingresa tu correo electrónico en donde enviaremos los pasos para recuperar tu contraseña</string>
    <string name="OP_botonRecuperar">RECUPERAR</string>
    ------------------------------------------------------------------------------------

    <string name="pantalla_inicio_titulo">MIS ALERTAS</string>

    ------------------------------------------------------------------------------------

    <string name="AJ_informacion_personal">INFORMACIÓN PERSONAL</string>
    <string name="AJ_nombre">Nombre:</string>
    <string name="AJ_Apellido">Apellido:</string>
    <string name="AJ_Identificacion">Identificación:</string>
    <string name="AJ_Telefono">Teléfono:</string>
    <string name="AJ_Email">Email:</string>

    ------------------------------------------------------------------------------------
    <string name="pantalla_contactos_titulo">CONTACTOS</string>

    <string name="pantalLa_nuevo_contacto_titulo">AGREGAR CONTACTO</string>
    <string name="NC_nombre_del_contacto">NOMBRE DEL CONTACTO</string>
    <string name="NC_apellido_del_contacto">APELLIDO DEL CONTACTO</string>
    <string name="NC_mensaje_ingrese_email">Ingresa el correo electrónico del contacto que deseas agregar</string>
    <string name="NC_email_contacto">EMAIL DEL CONTACTO</string>
    <string name="NC_telefono_contacto">TELEFONO CONTACTO</string>
    <string name="crear">CREAR</string>
    <string name="guardar">GUARDAR</string>

    <string name="pantalLa_detalle_contacto_titulo">DETALLE CONTACTO</string>
    <string name="DC_nombre_contacto">Nombre contacto:</string>
    <string name="DC_nombre_contacto_secundario">Nombre contacto</string>
    <string name="DC_email_contacto">Email contacto:</string>
    <string name="DC_email_contacto_secundario">Email contacto</string>

    <string name="DC_telefono_contacto">Teléfono contacto:</string>
    <string name="DC_telefono_contacto_secundario">Teléfono contacto</string>

    <string name="LC_email">Email contacto</string>
    <string name="LC_telefono">Telefono contacto</string>
    ------------------------------------------------------------------------------------
    <string name="pantalla_grupos_titulo">GRUPOS</string>

    <string name="pantalla_nuevo_grupo_titulo">CREAR GRUPO</string>
    <string name="NG_nombre_del_grupo">NOMBRE DEL GRUPO</string>
    <string name="NG_descripcion_del_grupo">DESCRIPCIÓN DEL GRUPO</string>

    <string name="pantalla_detalle_grupo_titulo">DETALLE GRUPO</string>
    <string name="DG_nombre_grupo">Nombre grupo:</string>
    <string name="DG_nombre_grupo_secundario">Nombre del grupo</string>
    <string name="DG_integrantes_grupo">Integrantes del grupo:</string>

    <string name="DG_nombre_integrante">Nombre integrante</string>
    <string name="DG_apellido_integrante">Apellido integrante</string>
    <string name="DG_email_integrante">Email integrante</string>
    <string name="DG_telefono_integrante">Teléfono integrante</string>
    <string name="DG_agregar_integrante">ㅤAgregar integrantes</string>

    <string name="AI_agregar_integrante_titulo">AGREGAR INTEGRANTES</string>

    <string name="pantalla_detalle_integrante_titulo">DETALLE INTEGRANTE</string>
    <string name="DI_nombre_integrante">Nombre integrante:</string>
    <string name="DI_nombre_integrante_secundario">Nombre integrante</string>
    <string name="DI_email_integrante">Email integrante:</string>
    <string name="DI_email_integrante_secundario">Email integrante</string>
    <string name="DI_telefono_integrante">Teléfono integrante:</string>
    <string name="DI_telefono_integrante_secundario">Teléfono integrante</string>

    <string name="LG_descripcion">Descripción del grupo</string>
    ------------------------------------------------------------------------------------
    <string name="pantalla_alerta_titulo">ALERTA</string>
    <string name="A_nombre_alerta">Nombre de la alerta</string>
    <string name="A_titulo_alerta">INGRESE EL TITULO DE LA ALERTA</string>
    <string name="A_cuerpo_alerta">INGRESE EL CUERPO DE LA ALERTA</string>
    <string name="A_boton_alerta_especifica">Necesito un mecanico</string>
    ------------------------------------------------------------------------------------
    <string name="menuItem_principal">Principal</string>
    <string name="MI_inicio">Inicio</string>

    <string name="menuItem_personal">Personal</string>
    <string name="MI_contactos">Contactos</string>
    <string name="MI_agregar_contacto">Agregar contacto</string>

    <string name="menuItem_comunidad">Comunidad</string>
    <string name="MI_grupos">Grupos</string>
    <string name="MI_nuevo_grupo">Nuevo grupo</string>

    <string name="menuItem_comunicacion">Comunicación</string>
    <string name="MI_alerta">Alerta</string>

    <string name="MI_cerrarSesion">Cerrar sesión</string>
    ------------------------------------------------------------------------------------
    <string name="DH_titulo">MENÚ DE NAVEGACIÓN</string>
    <string name="invalid_email">Ingrese un correo eléctronico valido</string>


</resources>