<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/color_listas"
    app:cardCornerRadius="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        >

        <ImageView

            android:id="@+id/imagen_integrante"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_contacto">

        </ImageView>

        <TextView

            android:id="@+id/txt_nombreIntegrante"
            style="@style/txt_textoNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/imagen_integrante"
            android:layout_toRightOf="@id/imagen_integrante"
            android:text="@string/DG_nombre_integrante"
            android:textStyle="bold">

        </TextView>

        <TextView

            android:id="@+id/txt_apellidoIntegrante"
            style="@style/txt_textoNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/txt_nombreIntegrante"
            android:text="@string/DG_apellido_integrante"
            android:textStyle="bold">

        </TextView>

        <TextView

            android:id="@+id/txt_emailIntegrante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_apellidoIntegrante"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/imagen_integrante"
            android:layout_toRightOf="@id/imagen_integrante"
            android:text="@string/DG_email_integrante"
            style="@style/txt_textoNormal">

        </TextView>

        <TextView

            android:id="@+id/txt_telefonoContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_emailIntegrante"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/imagen_integrante"
            android:layout_toRightOf="@id/imagen_integrante"
            android:text="@string/DG_telefono_integrante"
            style="@style/txt_textoNormal">

        </TextView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>